fix background img on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1258,7 +1258,7 @@
 		        overflow: hidden;
 						width:100%;
 						position:relative;
-		        background: url(../images/banner.jpg) no-repeat center center;
+		        background: url(../images/sf_3.jpg) no-repeat center center;
 						background-attachment: scroll;
 		        -webkit-background-size: cover;
 		        -moz-background-size: cover;
